# barck

./: Cargo.toml
src/: actor.rs  main.rs
src/actor/: crossterm.rs  ratatui.rs
